--- a/package.json
+++ b/package.json
@@ -38,25 +38,32 @@
     "build:r": "r -f cjs",
     "build:ts": "tsc -p tsconfig.lib.json",
     "lint": "run-p lint:*",
-    "lint:es": "eslint . --max-warnings 10",
+    "lint:es": "eslint . --cache --max-warnings 10",
     "lint:tsc": "tsc --noEmit",
+    "postbuild": "cp lib/index.cjs api/_deepl.js",
     "prepare": "simple-git-hooks || exit 0",
-    "test": "vitest run --coverage",
-    "typecov": "type-coverage"
+    "prerelease": "pnpm build",
+    "release": "changeset publish",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "typecov": "type-coverage",
+    "vercel-build": "pnpm build && esno scripts/build"
   },
   "dependencies": {
     "commander": "^9.3.0",
-    "got": "^12.1.0",
+    "got": "^11.8.5",
     "tslib": "^2.4.0"
   },
   "devDependencies": {
     "@1stg/lib-config": "^6.1.3",
     "@changesets/changelog-github": "^0.4.4",
     "@changesets/cli": "^2.22.0",
-    "c8": "^7.11.3",
+    "@octokit/request": "^5.6.3",
+    "@types/jest": "^27.5.1",
+    "@vercel/node": "^1.15.3",
+    "esno": "^0.16.3",
+    "ts-jest": "^28.0.3",
     "type-coverage": "^2.21.1",
-    "typescript": "^4.7.2",
-    "vitest": "^0.13.0"
+    "typescript": "^4.7.2"
   },
   "typeCoverage": {
     "atLeast": 100,
