--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "deepl-translate": ["./src/index.ts"]
+      "deeplx": ["./src/index.ts"]
     }
   }
 }
