--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "./node_modules/@1stg/tsconfig/lib.json",
+  "extends": "@1stg/tsconfig/node16",
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
