--- a/package.json
+++ b/package.json
@@ -52,8 +52,9 @@
   },
   "dependencies": {
     "commander": "^11.1.0",
-    "got": "^14.0.0",
-    "tslib": "^2.6.2"
+    "node-fetch": "^3.3.2",
+    "tslib": "^2.6.2",
+    "x-fetch": "^0.1.3"
   },
   "devDependencies": {
     "@1stg/lib-config": "^12.0.1",
