chore: housekeeping, bump all (dev) deps, migrate to `x-fetch` and Vercel Edge Runtime

--- a/.github/workflows/vercel.yml
+++ b/.github/workflows/vercel.yml
@@ -6,6 +6,10 @@ on:
       - master
   pull_request: null
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -14,7 +18,7 @@ jobs:
 
       - name: Check Branch
         id: branch
-        if: ${{ github.ref  == 'refs/heads/master' }}
+        if: ${{ github.ref == 'refs/heads/master' }}
         run: |
           echo "args=--prod" >> $GITHUB_OUTPUT
           echo "comment=false" >> $GITHUB_OUTPUT
