--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,15 +4,19 @@ on:
   - push
   - pull_request
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   ci:
     name: Lint and Test with Node.js ${{ matrix.node }} on ${{ matrix.os }}
     strategy:
       matrix:
         node:
-          - 16
           - 18
           - 20
+          - 22
         os:
           - ubuntu-latest
       fail-fast: false
@@ -21,35 +25,29 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v4
 
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 8
-
       - name: Setup Node.js ${{ matrix.node }}
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node }}
-          cache: pnpm
+          cache: yarn
 
       - name: Install Dependencies
-        run: pnpm i --frozen-lockfile
+        run: yarn --immutable
 
       - name: Build, Lint and test
         run: |
-          pnpm build
-          pnpm lint
+          yarn build
+          yarn lint
+          yarn test
         env:
-          EFF_NO_LINK_RULES: true
           PARSER_NO_WATCH: true
 
-      - name: Test
-        run: pnpm test
-
       - name: Codecov
-        uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
 
       - name: Codacy Coverage
         uses: codacy/codacy-coverage-reporter-action@v1
         with:
-          project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+          api-token: ${{ secrets.CODACY_API_TOKEN }}
