--- a/package.json
+++ b/package.json
@@ -3,24 +3,34 @@
   "version": "0.1.3",
   "type": "module",
   "description": "An unofficial Node package to translate text using [DeepL](https://www.deepl.com).",
-  "author": "JounQin <admin@1stg.me>",
+  "repository": "https://github.com/un-ts/deeplx.git",
+  "author": "JounQin <admin@1stg.me> (https://www.1stG.me)",
+  "funding": "https://opencollective.com/deeplx",
   "license": "MIT",
-  "packageManager": "pnpm@8.12.1",
+  "packageManager": "yarn@4.8.1",
   "engines": {
     "node": ">=14.8"
   },
-  "bin": {
-    "deeplx": "./lib/cli.js"
-  },
+  "bin": "./lib/cli.js",
   "main": "./lib/index.cjs",
+  "types": "./lib/index.d.ts",
   "module": "./lib/index.js",
   "exports": {
-    "types": "./lib/index.d.ts",
-    "import": "./lib/index.js",
-    "require": "./lib/index.cjs"
+    "import": {
+      "types": "./lib/index.d.ts",
+      "default": "./lib/index.js"
+    },
+    "module-sync": {
+      "types": "./lib/index.d.ts",
+      "default": "./lib/index.js"
+    },
+    "require": {
+      "types": "./index.d.cts",
+      "default": "./lib/index.cjs"
+    }
   },
-  "types": "./lib/index.d.ts",
   "files": [
+    "index.d.cts",
     "lib"
   ],
   "keywords": [
@@ -36,39 +46,51 @@
     "translator"
   ],
   "scripts": {
-    "build": "run-p build:*",
-    "build:r": "r -f esm",
+    "build": "run-p 'build:*'",
+    "build:r": "r -f cjs",
     "build:tsc": "tsc -p tsconfig.lib.json",
-    "lint": "run-p lint:*",
+    "format": "prettier --write .",
+    "lint": "run-p 'lint:*'",
     "lint:es": "eslint . --cache --max-warnings 10",
     "lint:tsc": "tsc --noEmit",
-    "postbuild:r": "cp lib/index.esm.mjs api/_deeplx.js",
-    "prepare": "simple-git-hooks || exit 0",
-    "prerelease": "pnpm build",
-    "release": "changeset publish",
-    "test": "vitest run --coverage",
+    "prepare": "simple-git-hooks && yarn-berry-deduplicate || exit 0",
+    "release": "yarn build && clean-pkg-json && changeset publish",
+    "test": "vitest run",
     "typecov": "type-coverage",
-    "vercel-build": "pnpm build && tsx scripts/build"
+    "vercel-build": "yarn build && tsx scripts/build"
   },
   "dependencies": {
-    "commander": "^11.1.0",
+    "commander": "^13.1.0",
     "node-fetch": "^3.3.2",
-    "tslib": "^2.6.2",
-    "x-fetch": "^0.1.3"
+    "tslib": "^2.8.1",
+    "x-fetch": "^0.2.4"
   },
   "devDependencies": {
-    "@1stg/lib-config": "^12.0.1",
-    "@changesets/changelog-github": "^0.5.0",
-    "@changesets/cli": "^2.27.1",
-    "@octokit/request": "^8.1.6",
-    "@types/web": "^0.0.127",
-    "@vitest/coverage-istanbul": "^1.0.4",
-    "tsx": "^4.6.2",
-    "type-coverage": "^2.27.0",
-    "typescript": "^5.3.3",
-    "unplugin-auto-import": "^0.17.2",
-    "vercel": "^32.7.2",
-    "vitest": "^1.0.4"
+    "@1stg/common-config": "^12.0.0",
+    "@changesets/changelog-github": "^0.5.1",
+    "@changesets/cli": "^2.28.1",
+    "@commitlint/cli": "^19.8.0",
+    "@octokit/request": "^9.2.2",
+    "@pkgr/rollup": "^6.0.2",
+    "@size-limit/preset-small-lib": "^11.2.0",
+    "@types/web": "^0.0.216",
+    "@vitest/coverage-istanbul": "^3.1.1",
+    "clean-pkg-json": "^1.2.1",
+    "eslint": "^9.24.0",
+    "lint-staged": "^15.5.0",
+    "npm-run-all2": "^7.0.2",
+    "prettier": "^3.5.3",
+    "simple-git-hooks": "^2.12.1",
+    "size-limit": "^11.2.0",
+    "tsx": "^4.19.3",
+    "type-coverage": "^2.29.7",
+    "typescript": "^5.8.3",
+    "vitest": "^3.1.1",
+    "yarn-berry-deduplicate": "^6.1.1"
+  },
+  "resolutions": {
+    "es5-ext": "npm:@unes/es5-ext@latest",
+    "prettier": "^3.5.3"
   },
   "typeCoverage": {
     "atLeast": 100,
