--- a/.github/workflows/vercel.yml
+++ b/.github/workflows/vercel.yml
@@ -4,7 +4,11 @@ on:
   push:
     branches:
       - master
-  pull_request_target: null
+  pull_request: null
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   deploy:
@@ -14,7 +18,7 @@ jobs:
 
       - name: Check Branch
         id: branch
-        if: ${{ github.ref  == 'refs/heads/master' }}
+        if: ${{ github.ref == 'refs/heads/master' }}
         run: |
           echo "args=--prod" >> $GITHUB_OUTPUT
           echo "comment=false" >> $GITHUB_OUTPUT
