--- a/package.json
+++ b/package.json
@@ -3,23 +3,34 @@
   "version": "0.1.3",
   "type": "module",
   "description": "An unofficial Node package to translate text using [DeepL](https://www.deepl.com).",
-  "author": "JounQin <admin@1stg.me>",
+  "repository": "https://github.com/un-ts/deeplx.git",
+  "author": "JounQin <admin@1stg.me> (https://www.1stG.me)",
+  "funding": "https://opencollective.com/deeplx",
   "license": "MIT",
+  "packageManager": "yarn@4.8.1",
   "engines": {
-    "node": ">=12.20"
+    "node": "^12.20 || ^14.18.0 || >=16.0.0"
   },
-  "bin": {
-    "deeplx": "./lib/cli.js"
-  },
+  "bin": "./lib/cli.js",
   "main": "./lib/index.cjs",
+  "types": "./lib/index.d.ts",
   "module": "./lib/index.js",
   "exports": {
-    "types": "./lib/index.d.ts",
-    "import": "./lib/index.js",
-    "require": "./lib/index.cjs"
+    "import": {
+      "types": "./lib/index.d.ts",
+      "default": "./lib/index.js"
+    },
+    "module-sync": {
+      "types": "./lib/index.d.ts",
+      "default": "./lib/index.js"
+    },
+    "require": {
+      "types": "./index.d.cts",
+      "default": "./lib/index.cjs"
+    }
   },
-  "types": "./lib/index.d.ts",
   "files": [
+    "index.d.cts",
     "lib"
   ],
   "keywords": [
@@ -35,38 +46,56 @@
     "translator"
   ],
   "scripts": {
-    "build": "run-p build:*",
+    "build": "run-p 'build:*'",
     "build:r": "r -f cjs",
-    "build:ts": "tsc -p tsconfig.lib.json",
-    "lint": "run-p lint:*",
+    "build:tsc": "tsc -p tsconfig.lib.json",
+    "format": "prettier --write .",
+    "lint": "run-p 'lint:*'",
     "lint:es": "eslint . --cache --max-warnings 10",
     "lint:tsc": "tsc --noEmit",
-    "postbuild": "cp lib/index.cjs api/_deeplx.js",
-    "prepare": "simple-git-hooks || exit 0",
-    "prerelease": "pnpm build",
-    "release": "changeset publish",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "prepare": "simple-git-hooks && yarn-berry-deduplicate || exit 0",
+    "release": "yarn build && clean-pkg-json && changeset publish",
+    "test": "vitest run",
     "typecov": "type-coverage",
-    "vercel-build": "pnpm build && esno scripts/build"
+    "vercel-build": "yarn build && tsx scripts/build"
   },
   "dependencies": {
-    "commander": "^9.3.0",
-    "got": "^11.8.5",
-    "tslib": "^2.4.0"
+    "@pkgr/core": "^0.2.1",
+    "commander": "^13.1.0",
+    "node-fetch": "^3.3.2",
+    "tslib": "^2.8.1",
+    "whatlang-node": "^0.1.0",
+    "x-fetch": "^0.2.4"
   },
   "devDependencies": {
-    "@1stg/lib-config": "^6.1.3",
-    "@changesets/changelog-github": "^0.4.4",
-    "@changesets/cli": "^2.22.0",
-    "@octokit/request": "^5.6.3",
-    "@types/jest": "^27.5.1",
-    "@vercel/node": "^1.15.3",
-    "esno": "^0.16.3",
-    "ts-jest": "^28.0.3",
-    "type-coverage": "^2.21.1",
-    "typescript": "^4.7.2"
+    "@1stg/common-config": "^12.0.0",
+    "@changesets/changelog-github": "^0.5.1",
+    "@changesets/cli": "^2.28.1",
+    "@commitlint/cli": "^19.8.0",
+    "@octokit/request": "^9.2.2",
+    "@pkgr/rollup": "^6.0.2",
+    "@types/web": "^0.0.216",
+    "@vercel/node": "^5.1.14",
+    "@vitest/coverage-istanbul": "^3.1.1",
+    "clean-pkg-json": "^1.2.1",
+    "deeplx": "link:.",
+    "eslint": "^9.24.0",
+    "lint-staged": "^15.5.0",
+    "npm-run-all2": "^7.0.2",
+    "prettier": "^3.5.3",
+    "simple-git-hooks": "^2.12.1",
+    "size-limit": "^11.2.0",
+    "size-limit-preset-node-lib": "^0.3.0",
+    "tsx": "^4.19.3",
+    "type-coverage": "^2.29.7",
+    "typescript": "^5.8.3",
+    "vitest": "^3.1.1",
+    "yarn-berry-deduplicate": "^6.1.1"
   },
-  "packageManager": "pnpm@8.12.1",
+  "resolutions": {
+    "es5-ext": "npm:@unes/es5-ext@latest",
+    "prettier": "^3.5.3"
+  },
   "typeCoverage": {
     "atLeast": 100,
     "cache": true,
