--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,6 @@
 {
-  "extends": "./node_modules/@1stg/tsconfig/lib.json",
+  "extends": "@1stg/tsconfig/node16",
   "compilerOptions": {
-    "baseUrl": ".",
     "paths": {
       "deeplx": ["./src/index.ts"]
     }
