--- a/packages/@deeplx/cli/package.json
+++ b/packages/@deeplx/cli/package.json
@@ -2,7 +2,7 @@
   "name": "@deeplx/cli",
   "version": "0.1.1",
   "type": "module",
-  "description": "The cli for [`@deeplx/core`](https://github.com/un-ts/deeplx/blob/master/packages/@deeplx/core).",
+  "description": "The cli for [`@deeplx/core`](https://github.com/un-ts/deeplx/blob/master/packages/@deeplx/core), a powerful and easy-to-use yet free DeepL API client for Node.js using [DeepL](https://www.deepl.com) by porting [OwO-Network/DeepLX](https://github.com/OwO-Network/DeepLX).",
   "repository": "git+https://github.com/un-ts/deeplx.git",
   "homepage": "https://github.com/un-ts/deeplx/blob/master/packages/@deeplx/cli",
   "author": "JounQin <admin@1stg.me> (https://www.1stG.me)",
