--- a/packages/deeplx/package.json
+++ b/packages/deeplx/package.json
@@ -2,7 +2,7 @@
   "name": "deeplx",
   "version": "0.3.0",
   "type": "module",
-  "description": "All in one for `@deeplx/cli` and `@deeplx/core`, a powerful and easy-to-use yet free DeepL API client for Node.js.",
+  "description": "All in one for [`@deeplx/core`](https://github.com/un-ts/deeplx/blob/master/packages/@deeplx/core) and [`@deeplx/cli`](https://github.com/un-ts/deeplx/blob/master/packages/@deeplx/cli), a powerful and easy-to-use yet free DeepL API client for Node.js using [DeepL](https://www.deepl.com) by porting [OwO-Network/DeepLX](https://github.com/OwO-Network/DeepLX).",
   "repository": "git+https://github.com/un-ts/deeplx.git",
   "homepage": "https://github.com/un-ts/deeplx/blob/master/packages/@deeplx/core",
   "author": "JounQin <admin@1stg.me> (https://www.1stG.me)",
