--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "@deeplx/core": "workspace:*",
     "@octokit/request": "^9.2.3",
     "@pkgr/rollup": "^6.0.3",
-    "@types/web": "^0.0.219",
     "@vercel/node": "^5.1.14",
     "@vitest/coverage-istanbul": "^3.1.1",
     "eslint": "^9.24.0",
@@ -51,10 +50,13 @@
     "typescript": "^5.8.3",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.1.1",
-    "yarn-berry-deduplicate": "^6.1.1"
+    "yarn-berry-deduplicate": "^6.1.3"
   },
   "resolutions": {
-    "prettier": "^3.5.3"
+    "node-fetch": "npm:node-fetch-native@^1.6.6",
+    "prettier": "^3.5.3",
+    "undici": "npm:undici@^7.8.0",
+    "undici-types": "npm:undici@^7.8.0"
   },
   "typeCoverage": {
     "atLeast": 100,
