--- a/packages/@deeplx/cli/package.json
+++ b/packages/@deeplx/cli/package.json
@@ -40,7 +40,7 @@
   "dependencies": {
     "@deeplx/core": "^0.1.1",
     "commander": "^13.1.0",
-    "node-fetch": "^3.3.2"
+    "node-fetch-native": "^1.6.6"
   },
   "publishConfig": {
     "access": "public"
